# Umap

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py  test_cli.py  test_improvements.py
.claude/: settings.local.json
docs/: api.md  installation.md  usage.md
examples/: yalova_map.py  yalova_minimal.py  yalova_performance.py  yalova_styles.py
umap/: __init__.py  __main__.py  cli.py
umap/core/: extrude.py  fetch.py  plot.py
umap/utils/: cache.py  drawing.py  optimization.py  styles.py
