[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "umap-osm"
version = "2.0.0"
description = "Draw beautiful maps from OpenStreetMap with a simple Python API and CLI."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Umutcan Edizaslan"}]
dependencies = [
    "geopandas",
    "matplotlib",
    "osmnx",
    "psutil",
    "PyYAML",
    "numpy",
    "shapely"
]

[project.urls]
Homepage = "https://github.com/U-C4N/Umap"
